--- a/rayapi-interface/pom.xml
+++ b/rayapi-interface/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.2</version>
+        <version>2.7.14</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.ray</groupId>
@@ -14,7 +14,7 @@
     <name>rayapi-interface</name>
     <description>rayapi-interface</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>1.8</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -38,6 +38,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.ray</groupId>
+            <artifactId>rayapi-client-sdk</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
 
         <dependency>
             <groupId>cn.hutool</groupId>
