--- a/rayapi-backend/rayapi-gateway/src/main/resources/application.yml
+++ b/rayapi-backend/rayapi-gateway/src/main/resources/application.yml
@@ -18,3 +18,16 @@ logging:
       springframework:
         cloud:
           gateway: trace
+# 以下配置指定了应用的名称、使用的协议（Dubbo）、注册中心的类型（Nacos）和地址
+dubbo:
+  application:
+    name: dubbo-springboot-demo-provider
+    qosEnable: true
+    qosPort: 22223
+    qosAcceptForeignIp: false
+  protocol:
+    name: dubbo
+    port: 22223
+  registry:
+    id: nacos-registry
+    address: nacos://localhost:8848
