GateWay调用公共服务

--- a/rayapi-gateway/pom.xml
+++ b/rayapi-gateway/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>rayapi-client-sdk</artifactId>
             <version>0.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.ray</groupId>
+            <artifactId>rayapi-common</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
